# bank-reconciliation

./: .gitignore  EDA.md  PROJECT.md  README.md  TASK.md  bank_reconciliation.db  classifier_readme.md  finding.md  matcher_readme.md  pyproject.toml  transcript.md
.cursor/plans/: build_reconciliation_foundation_bf37c72a.plan.md  data_normalization_for_accuracy_3f135422.plan.md  improve_engine_and_matchers_5f3cba82.plan.md  refactor_for_best_practices_35bf1e02.plan.md  remotion_demo_video_c2ca7340.plan.md
.cursor/rules/: tdd-workflow.mdc  testing-quality.mdc
bank_reconciliation/: cli.py  dashboard.py  decorators.py  log_config.py
bank_reconciliation/db/: __init__.py  database.py  init_db.py  models.py
bank_reconciliation/reconciliation/: __init__.py  base.py  classifier.py  dummy_engine.py  engine.py  matchers.py  models.py  normalize.py  payer_registry.py
bank_reconciliation/templates/: dashboard.html
scripts/: analyze_unmatched.py  analyze_unmatched_v2.py  preview_classifier.py
tasks/: todo.md
tests/: test_reconcile.py
tests/unit/: test_classifier.py  test_engine.py  test_matchers.py
video/: capture-dashboard.mjs  package-lock.json  package.json
video/public/: inbox.webm  overview.webm  payments.webm
video/src/: Root.tsx  Video.tsx
video/src/components/: AnimatedCounter.tsx  BarChart.tsx  Caption.tsx  CodeBlock.tsx  FlowNode.tsx
video/src/scenes/: DashboardScene.tsx  PayerAmountScene.tsx  PaymentNumberScene.tsx  PipelineScene.tsx  ProblemScene.tsx  ResultsScene.tsx  TitleScene.tsx
video/src/styles/: theme.ts
